@@ -228,11 +228,16 @@ define preproc_for_host
 	rm $@.tmp
 endef
 
+bin/biting-pear-c++: bin/biting-pear-c++.o share/biting-pear/epic.o
+
 bin/biting-pear-c++.o: bin/biting-pear-c++.ii
 
-share/biting-pear/calm: share/biting-pear/calm.o share/biting-pear/nomnom.o
+share/biting-pear/calm: share/biting-pear/calm.o share/biting-pear/epic.o \
+    share/biting-pear/nomnom.o
 
 share/biting-pear/calm.o: share/biting-pear/calm.ii
+
+share/biting-pear/epic.o: share/biting-pear/epic.cc
 
 share/biting-pear/doge.o: share/biting-pear/doge.ii
 
